Fix send files customs

--- a/views/sections/delivery.ejs
+++ b/views/sections/delivery.ejs
@@ -57,6 +57,12 @@
         </tbody>
       </table>
     </div>
+    <div class="container-fluid">
+      <h3><b>Información relevante.</b></h3>
+      <ul>
+        <li>Todos los números de los repartidores se tienen en cuenta que son números +52; es decir números del país de México, si por alguna razón desea registrar un número que no es de México como repartidor puede hacerlo agregando $(indicativo), tenga en cuenta que indicativo corresponde al número indicativo valga la redundancia, en un ejemplo normal el registro debería verse así; $(57)3204777967 siendo este un número colombiano registrado.</li>
+      </ul>
+    </div>
     <div id="modal-center" class="uk-flex-top" uk-modal>
       <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
         <button
