--- a/views/sections/responses.ejs
+++ b/views/sections/responses.ejs
@@ -57,6 +57,12 @@
         </tbody>
       </table>
     </div>
+    <div class="container-fluid">
+      <h3><b>Información relevante.</b></h3>
+      <ul>
+        <li>Puedes usar parametrización para pasar parámetros de tus respuestas rápidas, estos parámetros son {nombre}, {direccion}, {observaciones}; estos parámetros pertenecen al cliente.</li>
+      </ul>
+    </div>
     <div id="modal-center-R" class="uk-flex-top" uk-modal>
       <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
         <button
