--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,6 @@
 <!--Sections-->
 <%- include("sections/history.ejs") %><%- include("sections/chat.ejs") %> <%-
 include("sections/home.ejs") %> <%- include("sections/info.ejs") %> <%- include
-("sections/responses.ejs") %> <%- include ("sections/delivery.ejs") %>
+("sections/responses.ejs") %> <%- include ("sections/delivery.ejs") %><%- include ("sections/configBot.ejs") %>
 <!--End Sections-->
 <%- include ("template/footer.ejs") %>
