--- a/views/template/footer.dev.ejs
+++ b/views/template/footer.dev.ejs
@@ -7,5 +7,6 @@
     <script src="js/waitMe.min.js"></script>
     <script src="js/sweetalert2.all.min.js"></script>
     <script src="js/btnActionDelivers.js"></script>
+    <script src="js/btnActionConfig.js"></script>
     <script src="js/btnActionResponses.js"></script>
 </html>
