--- a/views/sections/info.ejs
+++ b/views/sections/info.ejs
@@ -45,6 +45,8 @@
       <select id="delivery_select" class="form-control form-control-sm">
         <option value="0">Seleccione un repartidor</option>
       </select>
+      <input type="text" style="display: none;" id="tempChatPhone">
+      <input type="text" style="display: none;" id="tempChatActive">
     </div>
     <div class="form-group">
       <input
