feat fix bug notifi beetwen navegations

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,3 +5,4 @@ include("sections/home.ejs") %> <%- include("sections/info.ejs") %> <%- include
 ("sections/responses.ejs") %> <%- include ("sections/delivery.ejs") %><%- include ("sections/configBot.ejs") %>
 <!--End Sections-->
 <%- include ("template/footer.ejs") %>
+<script src="./js/serviceWorker.js"></script>
