--- a/views/template/navbar.ejs
+++ b/views/template/navbar.ejs
@@ -1,1 +1,26 @@
-<nav class="menu"> <ul class="items"> <li id="menu-nav" class="item-custom item-menu"> <i class="fa fa-align-justify fa-menu"></i> </li> <li class="item item-active" data-toggle="tooltip" data-placement="right" title="Pagina de inicio"> <i class="fa fa-home" aria-hidden="true"></i> </li> <li class="item" data-toggle="tooltip" data-placement="right" title="Tooltip on right"> <i class="fa fa-user" aria-hidden="true"></i> </li> <li class="item" data-toggle="tooltip" data-placement="right" title="Edición de respuestas rápidas"> <i class="fa fa-pencil" aria-hidden="true"></i> </li> <li class="item" data-toggle="tooltip" data-placement="right" title="Chat"> <i class="fa fa-commenting" aria-hidden="true"></i> </li> <li class="item" data-toggle="tooltip" data-placement="right" title="Edición de repartidores"> <i class="fa fa-file" aria-hidden="true"></i> </li> <li class="item" data-toggle="tooltip" data-placement="right" title="Configuración del bot"> <i class="fa fa-cog" aria-hidden="true"></i> </li> </ul> </nav> 
+<nav class="menu">
+    <ul class="items">
+      <li id="menu-nav" class="item-custom item-menu">
+        <i class="fa fa-align-justify fa-menu"></i>
+      </li>
+      <li class="item item-active" data-toggle="tooltip" data-placement="right" title="Pagina de inicio">
+        <i class="fa fa-home" aria-hidden="true"></i>
+      </li>
+      <li class="item" data-toggle="tooltip" data-placement="right" title="Tooltip on right" style="display: none;">
+        <i class="fa fa-user" aria-hidden="true"></i>
+      </li>
+      <li class="item" data-toggle="tooltip" data-placement="right" title="Edición de respuestas rápidas">
+        <i class="fa fa-pencil" aria-hidden="true"></i>
+      </li>
+      <li class="item" data-toggle="tooltip" data-placement="right" title="Chat">
+        <i class="fa fa-commenting" aria-hidden="true"></i>
+      </li>
+      <li class="item" data-toggle="tooltip" data-placement="right" title="Edición de repartidores">
+        <i class="fa fa-file" aria-hidden="true"></i>
+      </li>
+      <li class="item" data-toggle="tooltip" data-placement="right" title="Configuración del bot">
+        <i class="fa fa-cog" aria-hidden="true"></i>
+      </li>
+    </ul>
+  </nav>
+  
