Fix variuos chat logic

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     </div>
     <div class="input-group px-5 pb-5 row">
       <span class="input-group-text col-md-5">Contraseña: </span>
-      <input type="text" aria-label="Last name" class="form-control" id="inp-pass"/>
+      <input type="password" aria-label="Last name" class="form-control" id="inp-pass"/>
     </div>
     <div class="mx-auto mb-5" style="width: 100px;">
       <button class="btn btn-primary" id="btn-login">Iniciar sesión</button>
