--- a/views/sections/configBot.ejs
+++ b/views/sections/configBot.ejs
@@ -1,6 +1,7 @@
 <section id="window_config" class="chat disable_window">
     <div class="header-chat">
-      <div class="titlepage">
+    <i class="fa fa-align-justify fa-2x fa-menu"></i>
+    <div class="titlepage">
         <h2>Mensaj<span class="green">es bot.</span></h2>
       </div>
     </div>
