--- a/views/sections/history.ejs
+++ b/views/sections/history.ejs
@@ -1,4 +1,4 @@
-<section class="discussions disable_window">
+<section id="section-history" class="discussions disable_window">
   <!--<div class="discussion search">
       <div class="searchbar">
         <i class="fa fa-search" aria-hidden="true"></i>
