--- a/views/sections/responses.ejs
+++ b/views/sections/responses.ejs
@@ -1,5 +1,6 @@
 <section id="window_responses" class="chat disable_window">
   <div class="header-chat">
+    <i class="fa fa-align-justify fa-2x fa-menu"></i>
     <div class="titlepage">
       <h2>Respue<span class="green">stas</span></h2>
     </div>
