--- a/views/sections/delivery.ejs
+++ b/views/sections/delivery.ejs
@@ -1,5 +1,6 @@
 <section id="window_delivery" class="chat disable_window">
   <div class="header-chat">
+    <i class="fa fa-align-justify fa-2x fa-menu"></i>
     <div class="titlepage">
       <h2>Reparti<span class="green">dores</span></h2>
     </div>
