feat crud app/delivers and responses

--- a/app/src/views/template/header.ejs
+++ b/app/src/views/template/header.ejs
@@ -85,18 +85,18 @@
                         </li>
                         <li class="nav-header">BASE DE DATOS</li>
                         <li class="nav-item">
-                            <a href="/Repartidores" class="nav-link">
-                                <i class="nav-icon fas fa-briefcase"></i>
+                            <a href="/delivers" class="nav-link">
+                                <i class="nav-icon fas fa-user"></i>
                                 <p>
                                     Repartidores
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Clientes" class="nav-link">
-                                <i class="nav-icon fas fa-user"></i>
+                            <a href="/responses" class="nav-link">
+                                <i class="nav-icon fas fa-robot"></i>
                                 <p>
-                                    Clientes
+                                    Respuestas 
                                 </p>
                             </a>
                         </li>
