--- a/app/src/views/template/footer.ejs
+++ b/app/src/views/template/footer.ejs
@@ -38,6 +38,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/dist/js/core.js"></script>
 <script src="/dist/js/adminlte.min.js?v=3.2.0"></script>
+<script src="/plugins/sweetalert2/sweetalert2.all.min.js"></script>
 </body>
 
 
