--- a/app/src/views/auth/login.ejs
+++ b/app/src/views/auth/login.ejs
@@ -56,7 +56,7 @@
     <script src="/plugins/jquery/jquery.min.js"></script>
     <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/plugins/toastr/toastr.min.js"></script>
-    <script src="/dist/js/core_login.min.js"></script>
+    <script src="/dist/js/core_login.js"></script>
 </body>
 
 </html>
