--- a/app/src/views/template/footer.ejs
+++ b/app/src/views/template/footer.ejs
@@ -33,6 +33,12 @@
 
 
 <script src="/plugins/jquery/jquery.min.js"></script>
+<script>
+    window.addEventListener("unload", function () {
+      // Limpiar la caché de sesión cuando el usuario abandona la página
+      sessionStorage.clear();
+    });
+  </script>  
 <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="/plugins/select2/js/select2.full.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
