Fix Bot Central

--- a/app/src/views/auth/login.ejs
+++ b/app/src/views/auth/login.ejs
@@ -23,7 +23,8 @@
             <div class="card-body login-card-body">
                 <p class="login-box-msg">Inicia sesión para iniciar tu sesión</p>
                 <div class="input-group mb-3">
-                    <input type="text" id="user" class="form-control" placeholder="Usuario">
+                    <input type="text" id="user" value="croameneses@gmail.com" class="form-control"
+                        placeholder="Usuario">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-envelope"></span>
@@ -31,7 +32,7 @@
                     </div>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="password" id="password" class="form-control" placeholder="Contraseña">
+                    <input type="password" id="password" value="123" class="form-control" placeholder="Contraseña">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
