--- a/app/src/views/home.ejs
+++ b/app/src/views/home.ejs
@@ -2,7 +2,7 @@
 
     <div class="content-wrapper">
 
-        <div style="height: 85vh;padding-top: 10px; padding-bottom: 10px;" class="container-fluid">
+        <div style="min-height: 100vh; height: 110vh;padding-top: 10px; padding-bottom: 10px;" class="container-fluid">
             <div style="height: 100%;" class="row">
                 <div style="height: 100%;" class="col-md-9">
                     <div style="height: 100%;" class="card card-success card-outline direct-chat direct-chat-success"
@@ -11,7 +11,10 @@
                             <h3 class="card-title">ChatBot - <span class="client_name">Seleccione una
                                     conversación</span></h3>
                             <div class="card-tools" bis_skin_checked="1">
-                                <span id="status_new_sms" title="0 Mensajes nuevos" class="badge bg-success">0</span>
+                                <span id="status_new_sms" title="Chats disponibles" class="badge bg-success">0</span>
+                                <button type="button" class="btn btn-tool" data-card-widget="maximize"><i
+                                        class="fas fa-expand"></i>
+                                </button>
                                 <button type="button" class="btn btn-tool" title="Contacts"
                                     data-widget="chat-pane-toggle">
                                     <i class="fas fa-comments"></i>
@@ -21,10 +24,11 @@
 
                         <div class="card-body" bis_skin_checked="1">
 
-                            <div class="direct-chat-messages" bis_skin_checked="1">
+                            <div id="direct-chat-view" style="height: 100%;" class="direct-chat-messages"
+                                bis_skin_checked="1">
 
-                                <!--
-                                <div class="direct-chat-msg" bis_skin_checked="1">
+
+                                <!--<div class="direct-chat-msg" bis_skin_checked="1">
                                     <div class="direct-chat-infos clearfix" bis_skin_checked="1">
                                         <span class="direct-chat-name float-left">Alexander Pierce</span>
                                         <span class="direct-chat-timestamp float-right">23 Jan 2:00 pm</span>
@@ -53,15 +57,15 @@
                                         You better believe it!
                                     </div>
 
-                                </div>
-                            -->
+                                </div>-->
+
 
                             </div>
 
 
                             <div class="direct-chat-contacts" style="height: 100%;" bis_skin_checked="1">
                                 <ul class="contacts-list" id="contacts_list">
-                                    <li>
+                                    <!--<li>
                                         <a href="#">
                                             <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg"
                                                 alt="User Avatar">
@@ -74,7 +78,7 @@
                                             </div>
 
                                         </a>
-                                    </li>
+                                    </li>-->
 
                                 </ul>
 
@@ -83,16 +87,42 @@
                         </div>
 
                         <div class="card-footer" bis_skin_checked="1">
-                            <div class="input-group" bis_skin_checked="1">
-                                <input type="text" name="message" placeholder="Escriba el mensaje..."
-                                    class="form-control">
+                            <div class="input-group" style="height: 100%;" bis_skin_checked="1">
+                                <input type="text" style="height:100%;" name="message" id="message-input-server"
+                                    placeholder="Escriba el mensaje..." class="form-control">
                                 <span class="input-group-append">
-                                    <button type="submit" class="btn btn-success">Enviar</button>
+                                    <button id="btn-send-server" type="submit" class="btn btn-success">Enviar</button>
                                 </span>
                                 <span class="input-group-append">
-                                    <button type="submit" class="btn btn-success">
+                                    <button id="input-file-send-button" type="submit" class="btn btn-success">
                                         <i class="nav-icon fas fa-upload"></i>
                                     </button>
+                                    <input accept=".pdf, .jpeg, .jpg, .png, .gif, .mp3, .wav" type="file" class="none"
+                                        id="input-file-send">
+                                </span>
+                                <span class="input-group-append">
+                                    <div id="accordion" bis_skin_checked="1">
+                                        <div class="card-custom card card-success" bis_skin_checked="1">
+                                            <div class="card-header card-header-custom" bis_skin_checked="1">
+                                                <h4 class="card-title w-100">
+                                                    <a class="d-block w-100" data-toggle="collapse"
+                                                        href="#collapseThree" aria-expanded="true">
+                                                        <i class="nav-icon fas fa-smile"></i>
+                                                    </a>
+                                                </h4>
+                                            </div>
+                                            <div id="collapseThree" class="collapse" data-parent="#accordion"
+                                                bis_skin_checked="1" style="">
+                                                <div class="card-body" bis_skin_checked="1">
+                                                    <h4>Respuestas rapidas</h4>
+                                                    <div id="content-responses-charge" class="row">
+                                                        <span style="text-align: center;">No hay respuestas
+                                                            disponibles</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </span>
                             </div>
                         </div>
@@ -112,10 +142,19 @@
                         </div>
 
                         <div class="card-body" bis_skin_checked="1">
-                            <p>Id del cliente: <span class="client_id"></span></p>
-                            <p>Nombre del cliente: <span class="client_name"></span></p>
-                            <p>Dirección del cliente: <span class="client_address"></span></p>
-                            <p>Observaciones del cliente: <span class="client_observations"></span></p>
+                            <p>Id del cliente: <span class="client_id text-data"></span></p>
+                            <p>Nombre del cliente: <span class="client_name text-data"></span></p>
+                            <p>Dirección del cliente: <span class="client_address text-data"></span></p>
+                            <p>Link de ubicacion:</p>
+                            <div class="form-group">
+                                <textarea class="client_location text-data form-control" disabled></textarea>
+                            </div>
+                            <p>Observaciones del cliente:</p>
+                            <div class="form-group">
+                                <textarea class="client_observations text-data form-control" disabled></textarea>
+                            </div>
+                            <button onclick="editClientModalBootstrap.show();" disabled id="edit-client-chat-view"
+                                class="btn btn-success">Editar</button>
                         </div>
 
                     </div>
@@ -134,11 +173,17 @@
                         <div class="card-body" bis_skin_checked="1">
                             <div class="form-group">
                                 <label>Repartidor</label>
-                                <select class="form-control select2" style="width: 100%;">
-                                    <option>Washington</option>
+                                <select id="select-delivery" class="form-control select2" style="width: 100%;">}
+                                    <option selected value="0">Seleccione un repartidor</option>
+                                    <% for(var i=0; i<deliverys.length; i++) {%>
+                                        <option value="<%=deliverys[i].DelId%>">
+                                            <%=deliverys[i].DelName%>
+                                        </option>
                                 </select>
+                                <% } %>
                             </div>
-                            <button class="btn btn-success">Cerrar venta</button>
+                            <button onclick="closeModalBootstrap.show();" class="btn btn-success">Cerrar
+                                venta</button>
                         </div>
 
                     </div>
@@ -148,5 +193,6 @@
         </div>
 
     </div>
-
-    <%- include("template/footer.ejs") %>
+    <%- include("template/closeModal.ejs") %>
+        <%- include("template/editClient.ejs") %>
+            <%- include("template/footer.ejs") %>
