--- a/app/src/views/template/addModal2.ejs
+++ b/app/src/views/template/addModal2.ejs
@@ -1,21 +1,9 @@
-<div
-  class="modal fade"
-  id="addModal2"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="addModalTitle"
-  aria-hidden="true"
->
+<div class="modal fade" id="addModal2" tabindex="-1" role="dialog" aria-labelledby="addModalTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="addModalTitle">Agregar Respuesta automática</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -23,27 +11,17 @@
         <div class="card-body">
           <div class="form-group">
             <label for="exampleInputName1">Titulo</label>
-            <input
-              type="Name"
-              class="form-control"
-              id="exampleInputName2Add"
-              placeholder="Escribe el Titulo"
-            />
+            <input type="Name" class="form-control" id="exampleInputName2Add" placeholder="Escribe el Titulo" />
           </div>
           <div class="form-group">
             <label for="exampleInputPhone1">Respuesta</label>
-            <input
-              type="Phone"
-              class="form-control"
-              id="exampleInputPhone2Add"
-              placeholder="Escribe el Respuesta"
-            />
+            <input type="Phone" class="form-control" id="exampleInputPhone2Add" placeholder="Escribe el Respuesta" />
           </div>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">
-          Close
+          Cerrar
         </button>
         <button type="button" class="btn btn-primary" onclick="creteResponse()">Guardar cambios</button>
       </div>
