--- a/app/src/views/template/footer.ejs
+++ b/app/src/views/template/footer.ejs
@@ -35,16 +35,17 @@
 <script src="/plugins/jquery/jquery.min.js"></script>
 <script>
     window.addEventListener("unload", function () {
-      // Limpiar la caché de sesión cuando el usuario abandona la página
-      sessionStorage.clear();
+        // Limpiar la caché de sesión cuando el usuario abandona la página
+        sessionStorage.clear();
     });
-  </script>  
+</script>
 <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="/plugins/select2/js/select2.full.min.js"></script>
+<script src="/plugins/toastr/toastr.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/dist/js/core.js"></script>
 <script src="/dist/js/adminlte.min.js?v=3.2.0"></script>
 <script src="/plugins/sweetalert2/sweetalert2.all.min.js"></script>
+<script src="/dist/js/core.js"></script>
 </body>
 
 
