--- a/app/src/views/template/editClient.ejs
+++ b/app/src/views/template/editClient.ejs
@@ -23,6 +23,7 @@
                         <label for="">Dirección del cliente</label>
                         <input type="text" class="client_address form-control" id="edit_client_address"
                             placeholder="Escribe la informacion con la que editara el dato." />
+                        <input type="text" class="client_phone none" id="edit_client_phone">
                     </div>
                     <div class="form-group">
                         <label for="">Link de ubicacion del cliente</label>
