--- a/app/src/views/template/header.ejs
+++ b/app/src/views/template/header.ejs
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="/plugins/select2/css/select2.min.css" />
   <link rel="stylesheet" href="/plugins/toastr/toastr.min.css">
   <link rel="stylesheet" href="/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css" />
+  <link rel="stylesheet" href="/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+  <link rel="stylesheet" href="/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
   <link rel="shortcut icon" href="/dist/img/favicon.png" type="image/x-icon" />
 </head>
 
@@ -79,7 +82,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="/" class="nav-link">
+              <a href="/Client" class="nav-link">
                 <i class="nav-icon fas fa-mouse-pointer"></i>
                 <p>Clientes</p>
               </a>
@@ -98,7 +101,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="/Logout" class="nav-link">
+              <a href="javascript:setLogoutWhatsapp()" class="nav-link">
                 <i class="nav-icon fab fa-whatsapp"></i>
                 <p class="text">Desvincular WhatsApp</p>
               </a>
