--- a/src/views/template/header.ejs
+++ b/src/views/template/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
@@ -22,6 +22,11 @@
 
 <body class="hold-transition sidebar-mini">
   <div class="wrapper">
+
+    <div class="preloader flex-column justify-content-center align-items-center">
+      <img class="animation__shake" src="/dist/img/favicon.png" alt="Preloader" height="120" width="160">
+    </div>
+
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
       <ul class="navbar-nav">
         <li class="nav-item">
