--- a/src/views/client.ejs
+++ b/src/views/client.ejs
@@ -35,6 +35,7 @@
                                             <th>Telefono</th>
                                             <th>Observaciones</th>
                                             <th>Ubicacion</th>
+                                            <th>Dirección</th>
                                             <th>Opciones</th>
                                         </tr>
                                     </thead>
@@ -58,6 +59,9 @@
                                                     <%=clients[i].CliLocation%>
                                                 </td>
                                                 <td>
+                                                    <%=clients[i].CliAddress%>
+                                                </td>
+                                                <td>
                                                     <button
                                                         onclick="editClientModalBootstrap.show();chargeClient('<%=clients[i].CliPhone%>')"
                                                         class="btn btn-success">Editar</button>
@@ -73,6 +77,7 @@
                                             <th>Telefono</th>
                                             <th>Observaciones</th>
                                             <th>Ubicacion</th>
+                                            <th>Dirección</th>
                                             <th>Opciones</th>
                                         </tr>
                                     </tfoot>
