--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,7 +14,7 @@
                                 <button type="button" class="btn btn-tool" data-card-widget="maximize"><i
                                         class="fas fa-expand"></i>
                                 </button>
-                                <button type="button" class="btn btn-tool" title="Contacts"
+                                <button type="button" id="openchat-btn" class="btn btn-tool" title="Contacts"
                                     data-widget="chat-pane-toggle">
                                     <i class="fas fa-comments"></i>
                                 </button>
@@ -82,8 +82,8 @@
                         </div>
 
                         <div class="card-footer" bis_skin_checked="1">
-                            <div class="input-group" style="height: 100%;" bis_skin_checked="1">
-                                <input type="text" style="height:100%;" name="message" id="message-input-server"
+                            <div class="input-group" bis_skin_checked="1">
+                                <input type="text" name="message" id="message-input-server"
                                     placeholder="Escriba el mensaje..." class="form-control">
                                 <span class="input-group-append">
                                     <button id="btn-send-server" type="submit" class="btn btn-success">Enviar</button>
@@ -95,30 +95,28 @@
                                     <input accept=".pdf, .jpeg, .jpg, .png, .gif, .mp3, .wav" type="file" class="none"
                                         id="input-file-send">
                                 </span>
-                                <span class="input-group-append">
-                                    <div id="accordion" bis_skin_checked="1">
-                                        <div class="card-custom card card-success" bis_skin_checked="1">
-                                            <div class="card-header card-header-custom" bis_skin_checked="1">
-                                                <h4 class="card-title w-100">
-                                                    <a class="d-block w-100" data-toggle="collapse"
-                                                        href="#collapseThree" aria-expanded="true">
-                                                        <i class="nav-icon fas fa-smile"></i>
-                                                    </a>
-                                                </h4>
-                                            </div>
-                                            <div id="collapseThree" class="collapse" data-parent="#accordion"
-                                                bis_skin_checked="1" style="">
-                                                <div class="card-body" bis_skin_checked="1">
-                                                    <h4>Respuestas rapidas</h4>
-                                                    <div id="content-responses-charge" class="row">
-                                                        <span style="text-align: center;">No hay respuestas
-                                                            disponibles</span>
-                                                    </div>
-                                                </div>
+                            </div>
+                            <div id="accordion" bis_skin_checked="1">
+                                <div class="card-custom card card-success" bis_skin_checked="1">
+                                    <div class="card-header card-header-custom" bis_skin_checked="1">
+                                        <h4 class="card-title w-100">
+                                            <a class="d-block w-100" data-toggle="collapse" href="#collapseThree"
+                                                aria-expanded="true">
+                                                <i class="nav-icon fas fa-smile"></i> Respuestas rapidas.
+                                            </a>
+                                        </h4>
+                                    </div>
+                                    <div id="collapseThree" class="collapse show" data-parent="#accordion"
+                                        bis_skin_checked="1" style="">
+                                        <div class="card-body" bis_skin_checked="1">
+                                            <h4>Respuestas rapidas</h4>
+                                            <div id="content-responses-charge" class="row">
+                                                <span style="text-align: center;">No hay respuestas
+                                                    disponibles</span>
                                             </div>
                                         </div>
                                     </div>
-                                </span>
+                                </div>
                             </div>
                         </div>
 
